# v2os

./: README.md  requirements.txt  setup.cfg  setup.py
etc/: dev.conf
v2os/libvirt/: config.py  driver.py
v2os/migrate/: __init__.py  cmd.py  instance.py  l2.py  l3.py  manager.py
v2os/objects/: __init__.py  models.py  types.py
