[metadata]
name = v2os
author = jinlong.yang
author-email = 1990yangjinlong@163.com
summary = vcenter migrate to openstack 
classifier =
    Development Status :: 1 - Planning
    Environment :: Plugins
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    v2os

[entry_points]
console_scripts =
    v2os-migrate = v2os.migrate.cmd:v2os_migrate
